--- a/index.html
+++ b/index.html
@@ -26,25 +26,34 @@
 
     <div class="main-menu">
         <div class="info">
+            <!-- <div class="my-img-div">
+                <img id="second-img" src="images/dp.jpg" alt="">
+            </div> -->
             <label>Hello I'm</label>
             <h1>Abdul Mateen</h1>
             <p class="work">Web Developer</p>
-            <p>As Creative, Passionate and Consistent Student I am pursuing my 
-                Bachelor's degree in Computer Science. I have been part of 
-                multiple Societies, Communities and been a starting member of 
-                UET Tech Community. I always try to find and learn from new 
-                opportunities. My goal is to work as a software developer and 
-                contribute to innovative technology solutions. Being Creative I 
+            <p>As Creative, Passionate and Consistent Student I am pursuing my
+                Bachelor's degree in Computer Science. I have been part of
+                multiple Societies, Communities and been a starting member of
+                UET Tech Community. I always try to find and learn from new
+                opportunities. My goal is to work as a software developer and
+                contribute to innovative technology solutions. Being Creative I
                 have multiple outstanding projects solo and in groups. </p>
             <div class="social-media">
                 <a href="https://facebook.com/AbdulMateenzwl"><i class="fab fa-facebook white-color fa-2x"></i></a>
                 <a href="https://instagram.com/AbdulMateenzwl"><i class="fab fa-instagram white-color fa-2x"></i></a>
                 <a href="https://linkedin.com/in/AbdulMateenzwl"><i class="fab fa-linkedin white-color fa-2x"></i></a>
                 <a href="https://github.com/AbdulMateenzwl"><i class="fab fa-github white-color fa-2x"></i></a>
+                <a href="http://AbdulMateenzwl.com"><i class="fa-solid fa-globe white-color fa-2x"></i></a>
             </div>
         </div>
-        <div></div>
+
+        <div class="my-img-div">
+            <img id="first-img" src="images/dp.jpg" alt="">
+        </div>
     </div>
+
+
 
     <script src="https://kit.fontawesome.com/bc80f90ff7.js" crossorigin="anonymous"></script>
 </body>
