--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <title>My Portfolio</title>
+    <link rel="icon" href="/images/mateen word black&white.jpg">
 </head>
 
 <body>
@@ -26,25 +27,26 @@
 
     <div class="main-menu">
         <div class="info">
-            <!-- <div class="my-img-div">
-                <img id="second-img" src="images/dp.jpg" alt="">
-            </div> -->
-            <label>Hello I'm</label>
-            <h1>Abdul Mateen</h1>
-            <p class="work">Web Developer</p>
-            <p>As Creative, Passionate and Consistent Student I am pursuing my
-                Bachelor's degree in Computer Science. I have been part of
-                multiple Societies, Communities and been a starting member of
-                UET Tech Community. I always try to find and learn from new
-                opportunities. My goal is to work as a software developer and
-                contribute to innovative technology solutions. Being Creative I
-                have multiple outstanding projects solo and in groups. </p>
-            <div class="social-media">
-                <a href="https://facebook.com/AbdulMateenzwl"><i class="fab fa-facebook white-color fa-2x"></i></a>
-                <a href="https://instagram.com/AbdulMateenzwl"><i class="fab fa-instagram white-color fa-2x"></i></a>
-                <a href="https://linkedin.com/in/AbdulMateenzwl"><i class="fab fa-linkedin white-color fa-2x"></i></a>
-                <a href="https://github.com/AbdulMateenzwl"><i class="fab fa-github white-color fa-2x"></i></a>
-                <a href="http://AbdulMateenzwl.com"><i class="fa-solid fa-globe white-color fa-2x"></i></a>
+            <div id="test">
+                <label>Hello I'm</label>
+                <h1>Abdul Mateen</h1>
+                <p class="work">Web Developer</p>
+                <p>As Creative, Passionate and Consistent Student I am pursuing my
+                    Bachelor's degree in Computer Science. I have been part of
+                    multiple Societies, Communities and been a starting member of
+                    UET Tech Community. I always try to find and learn from new
+                    opportunities. My goal is to work as a software developer and
+                    contribute to innovative technology solutions. Being Creative I
+                    have multiple outstanding projects solo and in groups. </p>
+                <div class="social-media">
+                    <a href="https://facebook.com/AbdulMateenzwl"><i class="fab fa-facebook white-color fa-2x"></i></a>
+                    <a href="https://instagram.com/AbdulMateenzwl"><i
+                            class="fab fa-instagram white-color fa-2x"></i></a>
+                    <a href="https://linkedin.com/in/AbdulMateenzwl"><i
+                            class="fab fa-linkedin white-color fa-2x"></i></a>
+                    <a href="https://github.com/AbdulMateenzwl"><i class="fab fa-github white-color fa-2x"></i></a>
+                    <a href="https://AbdulMateenzwl.com"><i class="fa-solid fa-globe white-color fa-2x"></i></a>
+                </div>
             </div>
         </div>
 
