main page updated

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <nav id="nav-bar">
-        <div class="bars">
+        <div id="bars">
             <i class="fa-solid fa-bars white-color hamburger-menu fa-5x" id="bars"></i>
         </div>
         <div class="menu">
@@ -27,11 +27,11 @@
 
     <div class="main-menu">
         <div class="info">
-            <div id="test">
+            <div id="info-data">
                 <label>Hello I'm</label>
-                <h1>Abdul Mateen</h1>
-                <p class="work">Web Developer</p>
-                <p>As Creative, Passionate and Consistent Student I am pursuing my
+                <h1 id="my-name">Abdul Mateen</h1>
+                <p id="work">Web Developer</p>
+                <p id="details-info">As Creative, Passionate and Consistent Student I am pursuing my
                     Bachelor's degree in Computer Science. I have been part of
                     multiple Societies, Communities and been a starting member of
                     UET Tech Community. I always try to find and learn from new
