links wrap, center

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                     opportunities. My goal is to work as a software developer and
                     contribute to innovative technology solutions. Being Creative I
                     have multiple outstanding projects solo and in groups. </p>
-                <div class="social-media">
+                <div id="social-media">
                     <a href="https://facebook.com/AbdulMateenzwl"><i class="fab fa-facebook white-color fa-2x"></i></a>
                     <a href="https://instagram.com/AbdulMateenzwl"><i
                             class="fab fa-instagram white-color fa-2x"></i></a>
