--- a/index.html
+++ b/index.html
@@ -3,26 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./Style/index.css">
     <title>My Portfolio</title>
-    <link rel="icon" href="/images/mateen word black&white.jpg">
+    <link rel="icon" href="./images/mateen word black&white.jpg">
 </head>
 
 <body>
     <nav id="nav-bar">
         <div id="bars">
-            <i class="fa-solid fa-bars white-color hamburger-menu fa-5x" id="bars"></i>
+            <i class="fa-solid fa-bars white-color hamburger-menu fa-5x" id="bars" onclick="toggleSideBar()"></i>
         </div>
         <div class="menu">
-            <ul>
-                <li><a href="">Home</a></li>
-                <li><a href="">About Us</a></li>
-                <li><a href="">Events</a></li>
-                <li><a href="">Blogs</a></li>
-                <li><a href="">Courses</a></li>
-                <li><a href="">Staff</a></li>
+            <ul id="test11" >
+                <li><a href="https://AbdulMateenzwl.com">Home</a></li>
+                <li><a href="#about-me">About Me</a></li>
+                <li><a href="Projects">Projects</a></li>
+                <li ><a href="https://connect.AbdulMateenzwl.com">Contact Me</a></li>
+                <li onclick="toggleSideBar()" id="close-btn"><a href="#">Close</a></li>
             </ul>
         </div>
+
     </nav>
 
     <div class="main-menu">
@@ -31,13 +31,11 @@
                 <label>Hello I'm</label>
                 <h1 id="my-name">Abdul Mateen</h1>
                 <p id="work">Web Developer</p>
-                <p id="details-info">As Creative, Passionate and Consistent Student I am pursuing my
-                    Bachelor's degree in Computer Science. I have been part of
-                    multiple Societies, Communities and been a starting member of
-                    UET Tech Community. I always try to find and learn from new
-                    opportunities. My goal is to work as a software developer and
-                    contribute to innovative technology solutions. Being Creative I
-                    have multiple outstanding projects solo and in groups. </p>
+                <p id="details-info">As Creative, Passionate and Consistent Student I am pursuing my Bachelor's degree
+                    in Computer Science. I have been part of multiple Societies, Communities and been a starting member
+                    of UET Tech Community. I always try to find and learn from new opportunities. My goal is to work as
+                    a software developer and contribute to innovative technology solutions. Being Creative I have
+                    multiple outstanding projects solo and in groups. </p>
                 <div id="social-media">
                     <a href="https://facebook.com/AbdulMateenzwl"><i class="fab fa-facebook white-color fa-2x"></i></a>
                     <a href="https://instagram.com/AbdulMateenzwl"><i
@@ -46,18 +44,20 @@
                             class="fab fa-linkedin white-color fa-2x"></i></a>
                     <a href="https://github.com/AbdulMateenzwl"><i class="fab fa-github white-color fa-2x"></i></a>
                     <a href="https://AbdulMateenzwl.com"><i class="fa-solid fa-globe white-color fa-2x"></i></a>
+                    <a href="https://connect.AbdulMateenzwl.com"><i
+                            class="fa-solid fa-ellipsis-vertical white-color fa-2x"></i></a>
                 </div>
             </div>
         </div>
 
         <div class="my-img-div">
-            <img id="first-img" src="images/dp.jpg" alt="">
+            <img id="first-img" src="./images/dp.jpg" alt="">
         </div>
     </div>
 
     <div id="about-me">
         <div class="img">
-            <img src="/images/about-img.png" alt="">
+            <img src="./images/about-img.png" alt="">
         </div>
         <div id="about-text">
             <p class="heading">About Me</p>
@@ -71,6 +71,21 @@
             <button class="btn-primary">Download CV</button>
         </div>
     </div>
+
+    <!-- <script src="./Script/index.js"></script> -->
+    <script>
+        function toggleSideBar() {
+            let obj = document.getElementById("test11");
+            if (obj.classList.contains("active")){
+                obj.classList.remove("active");
+                obj.classList.add("hide")
+            }
+            else
+                obj.classList.add("active");
+                console.log(obj);
+        }
+    </script>
+
 
     <script src="https://kit.fontawesome.com/bc80f90ff7.js" crossorigin="anonymous"></script>
 </body>
