--- a/index.html
+++ b/index.html
@@ -72,6 +72,38 @@
         </div>
     </div>
 
+    <div id="work-section">
+        <p class="heading">What I do</p>
+        <div id="skill-blocks">
+
+            <div class="card">
+                <p>Web Development</p>
+                <i class="fa-solid fa-code fa-5x"></i>
+            </div>
+            
+            <div class="card">
+                <p>Web Designing</p>
+                <i class="fa-solid fa-code fa-5x"></i>
+            </div>
+
+            <div class="card">
+                <p>Graphic Designing</p>
+                <i class="fa-solid fa-paintbrush fa-5x"></i>
+            </div>
+            <div class="card">
+                <p>Problem Solving</p>
+                <i class="fa-solid fa-gears fa-5x"></i>
+            </div>
+
+        </div>
+    </div>
+
+
+
+
+
+
+
     <!-- <script src="./Script/index.js"></script> -->
     <script>
         function toggleSideBar() {
