footer, heading, cv

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                     <ul id="test11">
                         <li><a href="https://AbdulMateenzwl.com">Home</a></li>
                         <li><a href="#about-me">About Me</a></li>
-                        <li><a href="Projects">Projects</a></li>
+                        <li><a href="#project-section">Projects</a></li>
                         <li>
                             <a href="https://connect.AbdulMateenzwl.com"
                                 >Contact Me</a
@@ -33,6 +33,7 @@
                     </ul>
                 </div>
             </nav>
+
             <div class="main-menu">
                 <div class="info">
                     <div id="info-data">
@@ -40,14 +41,7 @@
                         <h1 id="my-name">Abdul Mateen</h1>
                         <p id="work">Web Developer</p>
                         <p id="details-info">
-                            As Creative, Passionate and Consistent Student I am
-                            pursuing my Bachelor's degree in Computer Science. I
-                            have been part of multiple Societies, Communities and
-                            been a starting member of UET Tech Community. I always
-                            try to find and learn from new opportunities. My goal is
-                            to work as a software developer and contribute to
-                            innovative technology solutions. Being Creative I have
-                            multiple outstanding projects solo and in groups.
+                            Passionate Computer Science Graduate and Innovative Software Developer, Creating Meaningful Digital Experiences.
                         </p>
                         <div id="social-media">
                             <a href="https://facebook.com/AbdulMateenzwl"
@@ -77,6 +71,7 @@
                     <img id="first-img" src="./images/dp.jpg" alt="" />
                 </div>
             </div>
+
             <section id="about-me">
                 <div class="img">
                     <img src="./images/about-img.png" alt="" />
@@ -84,18 +79,12 @@
                 <div id="about-text">
                     <p class="heading">About Me</p>
                     <p>
-                        As Creative, Passionate and Consistent Student I am pursuing
-                        my Bachelor's degree in Computer Science. I have been part
-                        of multiple Societies, Communities and been a starting
-                        member of UET Tech Community. I always try to find and learn
-                        from new opportunities. My goal is to work as a software
-                        developer and contribute to innovative technology solutions.
-                        Being Creative I have multiple outstanding projects solo and
-                        in groups.
+                        Highly creative and passionate Computer Science graduate with a strong foundation in programming and a knack for problem-solving. Experienced in web development, graphic design, and game development, with a diverse range of outstanding solo and group projects. Eager to contribute my skills to innovative technology solutions as a software developer. Committed to continuous learning, with a track record of excelling in various societies and communities. Seeking opportunities to apply my expertise and drive to create meaningful digital experiences.
                     </p>
-                    <button class="btn-primary">Download CV</button>
+                    <a href="https://drive.google.com/u/0/uc?id=1yLjOFCWOVgWzr5IGyAafcnZeJ9aZivGN&export=download"><button class="btn-primary">Download CV</button></a>
                 </div>
             </section>
+
             <section id="work-section">
                 <p class="heading">What I do</p>
                 <div id="skill-blocks">
@@ -121,6 +110,7 @@
                     </div>
                 </div>
             </section>
+
             <section id="tech-skills">
                 <p class="heading">Technical Skills</p>
                 <div id="skill-bars">
@@ -174,6 +164,7 @@
                     </div>
                 </div>
             </section>
+
             <section id="education-experience">
                 <div id="education">
                     <p class="heading">Education</p>
@@ -206,6 +197,18 @@
                     </div>
                 </div>
             </section>
+
+            <section id="project-section">
+
+            </section>
+
+            <footer>
+                <div class="footer">
+                    <div class="footer-text">
+                        <p>© 2021 Abdul Mateen. All rights reserved.</p>
+                    </div>                           
+            </footer>
+
             <!-- <script src="./Script/index.js"></script> -->
             <script>
                 function toggleSideBar() {
